# xpd

./: README.md
python/: CMakeLists.txt  setup.py  tester.py  wrapper.cpp
python/puredatapy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: abstractserver.h  abstractserverprocess.cpp  abstractserverprocess.h  array.h  canvas.h  pd_canvas.cpp  pd_canvas.h  pd_consoleobserver.h  pd_floatarray.h  pd_localprocess.cpp  pd_localprocess.h  pd_localserver.h  pd_object.cpp  pd_object.h
tests/: CMakeLists.txt  test_xpd_abstract_server.cpp  test_xpd_abstract_server_process.cpp  test_xpd_pd_canvas.cpp  test_xpd_pd_localserver.cpp  test_xpd_pd_observers.cpp
